feat: adding edit course

--- a/www/webapp/templates/admin/course/components/createLesson/createLesson.html
+++ b/www/webapp/templates/admin/course/components/createLesson/createLesson.html
@@ -47,7 +47,7 @@
                 <input type="text" class="" placeholder="Lesson Name">
             </td>
             <td>
-                <button class="btn btn-danger">Remove</button>
+                <a id="remove-lesson" class="btn btn-danger">Remove</a>
                 <button class="btn btn-primary">Reorder</button>
             </td>
         `;
