--- a/www/webapp/templates/admin/course/components/createLesson/createLesson.html
+++ b/www/webapp/templates/admin/course/components/createLesson/createLesson.html
@@ -1,6 +1,6 @@
 {% from 'admin/course/components/createLesson/components/SelectLessonModal.html' import select_lesson_modal %}
 {% from 'admin/course/components/createLesson/components/SelectMaterialModal.html' import select_material_modal %}
-{% macro create_lesson(step_number) %}
+{% macro create_lesson(step_number, global_step, course=None) %}
 <div class="h-full">
     <div>
         <h3>Step {{step_number}}: Create Lesson</h3>
@@ -21,7 +21,6 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
                     <th scope="col">Lesson Name</th>
                     <th scope="col"></th>
                 </tr>
@@ -34,21 +33,25 @@
     {{ select_lesson_modal('selectLessonModal') }}
     {{ select_material_modal('selectMaterialModal') }}
 </div>
-<script>
-    const lessons = [];
-    const newLesson = document.querySelector("#addLesson");
-    const lessonsContainer = document.querySelector("#lessonsContainer");
+<script type="module">
+    import {LessonTable} from '/static/js/admin/course/createLesson/lessonTable.js';
 
-    const newLessonTemplate = (index) => {
+    const newLessonTemplate = (ondragg, ondraggover) => {
         const lessonTr = document.createElement("tr");
+        lessonTr.draggable = true;
+        lessonTr.ondragstart = ondragg;
+        lessonTr.ondragover = ondraggover;
+
         lessonTr.innerHTML = `
-            <th scope="row">${index}</th>
             <td>
-                <input type="text" class="" placeholder="Lesson Name">
+                <input id="lessonId" name="lesson_id" type="hidden" class="d-none">
+                <input id="lessonName" name="lesson_name" type="text" class="" placeholder="Lesson Name">
             </td>
             <td>
                 <a id="remove-lesson" class="btn btn-danger">Remove</a>
-                <button class="btn btn-primary">Reorder</button>
+                <a class="btn btn-secondary"
+                    data-bs-toggle="modal"
+                    data-bs-target="#selectMaterialModal">Add Material</a>
             </td>
         `;
 
@@ -60,18 +63,11 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Material Name</th>
-                            <th scope="col">
-                                <button class="btn btn-secondary"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#selectMaterialModal">Add Material</button>
-                            </th>
                         </tr>
                     </thead>
                     <tbody id="materialsContainer">
                         <tr>
-                            <th scope="row"></th>
                             <td>No materials added yet.</td>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -81,13 +77,11 @@
         return [lessonTr, materialTr];
     };
 
-    newLesson.addEventListener("click", () => {
-        const [lessonTr, materialTr] = newLessonTemplate(lessons.length + 1)
+    const course = "{{ course }}" !== "None" ? `{{ course | tojson }}` : null;
 
-        lessons.push([lessonTr, materialTr]);
-
-        lessonsContainer.appendChild(lessonTr);
-        lessonsContainer.appendChild(materialTr);
-    });
+    new LessonTable(
+        "{{step_number}}", newLessonTemplate,
+        "{{global_step}}", course
+    );
 </script>
 {% endmacro %}
