feat: select material add to material Table

--- a/www/webapp/templates/admin/course/components/createLesson/components/SelectMaterialModal.html
+++ b/www/webapp/templates/admin/course/components/createLesson/components/SelectMaterialModal.html
@@ -25,5 +25,7 @@
     const materialSelector = new QuerySelector(
         getMaterialList, "{{modal_id}}"
     );
+
+    globalThis.materialSelector = materialSelector;
 </script>
 {% endmacro %}
