--- a/www/webapp/templates/admin/course/components/createLesson/createLesson.html
+++ b/www/webapp/templates/admin/course/components/createLesson/createLesson.html
@@ -49,7 +49,7 @@
             </td>
             <td>
                 <a id="remove-lesson" class="btn btn-danger">Remove</a>
-                <a class="btn btn-secondary"
+                <a id="add-material" class="btn btn-secondary"
                     data-bs-toggle="modal"
                     data-bs-target="#selectMaterialModal">Add Material</a>
             </td>
