--- a/www/webapp/templates/admin/course/components/createLesson/createLesson.html
+++ b/www/webapp/templates/admin/course/components/createLesson/createLesson.html
@@ -66,7 +66,7 @@
                         </tr>
                     </thead>
                     <tbody id="materialsContainer">
-                        <tr>
+                        <tr id="placeHolder">
                             <td>No materials added yet.</td>
                         </tr>
                     </tbody>
@@ -76,10 +76,23 @@
 
         return [lessonTr, materialTr];
     };
-    let course = "{{ course | tojson if course else null }}";
+
+    const newMaterialTemplate = (material) => {
+        const materialTr = document.createElement("tr");
+
+        console.log(material);
+        materialTr.innerHTML = `
+            <td>1</td>
+            <td>Example</td>
+        `;
+
+        return materialTr;
+    }
+
+    const course = "{{ course }}" !== "None" ? `{{ course | tojson }}` : null;
 
     new LessonTable(
-        "{{step_number}}", newLessonTemplate,
+        "{{step_number}}", newLessonTemplate, newMaterialTemplate,
         "{{global_step}}", course
     );
 </script>
