feat: adding params

--- a/www/webapp/templates/auth/login.html
+++ b/www/webapp/templates/auth/login.html
@@ -7,6 +7,6 @@
 <link rel="stylesheet" href="/static/css/signup_form.css">
 {{ priceTable(subscription_types, true) }}
 
-{{ login(translations, true) }}
+{{ login(translations) }}
 
 {% endblock %}
