--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -13,7 +13,7 @@
         <div class="" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li>
-                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login">{{ translations['navbar']['sign_up']}}</a>
+                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login?pricetable=true">{{ translations['navbar']['sign_up']}}</a>
                 </li>
                 <li>
                     {% if session['lang'] == 'en' %}
