--- a/www/webapp/templates/auth/login.html
+++ b/www/webapp/templates/auth/login.html
@@ -11,7 +11,7 @@
 
 <div class="d-flex">
     <div class="d-none" id="priceTable">
-        {{ priceTable(subscription_types) }}
+        {{ priceTable(subscription_types, True) }}
     </div>
 
     {{ login(translations) }}
